kubernetes/apps/network/internal/remote-services/services/prowlarr.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/service.json
kind: Service
apiVersion: v1
metadata:
  name: remote-internal-prowlarr
  namespace: network
spec:
  ports:
    - port: 9696
      protocol: TCP
      targetPort: 9696
      name: http
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/endpointslice.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: remote-internal-prowlarr
  namespace: network
  labels:
    kubernetes.io/service-name: remote-internal-prowlarr
addressType: IPv4
ports:
  - port: 9696
endpoints:
  - addresses:
    - zeus.nas.home.internal
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/v1.32.3/ingress.json
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote-internal-prowlarr
  namespace: network
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: "external.${SECRET_DOMAIN}"
    error-pages.home.arpa/enabled: "true"
    authentik.home.arpa/enabled: "true"
    # gethomepage.dev/app: "prowlarr"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "prowlarr"
    gethomepage.dev/description: "Indexer Manager"
    gethomepage.dev/href: "https://apps.${SECRET_DOMAIN}/prowlarr"
    gethomepage.dev/group: "Media Organization"
    gethomepage.dev/icon: "prowlarr.png"
    gethomepage.dev/widget.type: "prowlarr"
    gethomepage.dev/widget.url: http://zeus.nas.home.internal:9696/prowlarr
    gethomepage.dev/widget.key: "${HOMEPAGE_VAR_PROWLARR_KEY}"
    gethomepage.dev/siteMonitor: http://zeus.nas.home.internal:9696
spec:
  ingressClassName: internal
  rules:
    - host: "apps.${SECRET_DOMAIN}"
      http:
        paths:
        - path: /prowlarr
          pathType: Prefix
          backend:
            service:
              name: remote-internal-prowlarr
              port:
                number: 9696
  tls:
    - hosts:
        - "apps.${SECRET_DOMAIN}"
      secretName: "${SECRET_DOMAIN/./-}-production-tls"
